--- a/ros/catkin_ws/ct_icp_odometry/params/ct_icp/nhcd/nhcd_config.yaml
+++ b/ros/catkin_ws/ct_icp_odometry/params/ct_icp/nhcd/nhcd_config.yaml
@@ -12,14 +12,14 @@ odometry_options:
   motion_compensation: CONTINUOUS # The profile of the motion compensation (NONE, CONSTANT_VELOCITY, ITERATIVE, CONTINUOUS)
   initialization: INIT_NONE
   sampling: ADAPTIVE
-  max_num_keypoints: 800
+  max_num_keypoints: 1000 # 800
 
   # -- Sampling Options
   sample_voxel_size: 0.6 # The size of a voxel for the selection of `keypoints` by grid sampling
 
   # -- Frame Options
   voxel_size: 0.3 # The voxel size for the grid sampling of the new frame (before keypoints extraction)
-  max_distance: 100.0 # The threshold of the distance to suppress voxels from the map
+  max_distance: 200.0 # 100.0 # The threshold of the distance to suppress voxels from the map
   distance_error_threshold: 5.0 # The motion of the sensor between two frames which is considered erroneous (stops the odometry)
   rotation_diff_threshold: 90.0 # The motion of the sensor between two frames which is considered erroneous (stops the odometry)
 
@@ -49,7 +49,7 @@ odometry_options:
     output_weights: false
 
     # -- Main Params
-    num_iters_icp: 8 # The number of iterations of the ICP
+    num_iters_icp: 20 # 8 # The number of iterations of the ICP
     parametrization: CONTINUOUS_TIME
     distance: POINT_TO_PLANE
     solver: CERES
